--- a/bot/templates/hint_viewer.html
+++ b/bot/templates/hint_viewer.html
@@ -566,6 +566,7 @@
                 invertColors = gameInfo.invert_colors || false;
                 matchLength = gameInfo.match_length || 0;
                 enable_crawford_game_number = gameInfo.enable_crawford_game_number || null;
+                console.log(enable_crawford_game_number)
                 const scores = gameInfo.scores || {};
                 const redScore = scores.Red || 0;
                 const blackScore = scores.Black || 0;
