--- a/bot/templates/hint_viewer.html
+++ b/bot/templates/hint_viewer.html
@@ -584,7 +584,7 @@
                     gameRedScore = scores.Red || 0;
                     gameBlackScore = scores.Black || 0;
                     playersInfoDiv.innerHTML = `<div style="display: flex; justify-content: space-between; align-items: center;"><span>Матч до ${matchLength}</span><span>Игра ${currentGameNum}</span><span>Счет: ${gameRedScore} - ${gameBlackScore}</span></div>Белые: ${redPlayer} – Черные: ${blackPlayer}<br>`;
-                    let crawfordHtml = (enable_crawford_game_number && currentGameNum == enable_crawford_game_number) ? '<span id="crawfordLabel">Кроуфорд</span>' : '';
+                    let crawfordHtml = (enable_crawford_game_number && currentGameNum === enable_crawford_game_number) ? '<span id="crawfordLabel">Кроуфорд</span>' : '';
                     topBar.innerHTML = crawfordHtml + selectHtml + '<input type="checkbox" id="hideInfoCheckbox">' + '<div id="black-pips" class="pips-above-board">0</div>';
 
                     const hideInfoCheckbox = document.getElementById('hideInfoCheckbox');
@@ -692,7 +692,7 @@
                         } else {
                             playersInfoDiv.innerHTML = `<div style="display: flex; justify-content: space-between; align-items: center;"><span>Матч до ${matchLength}</span><span>Игра ${currentGameNum}</span><span>Счет: ${gameRedScore} - ${gameBlackScore}</span></div>Белые: ${redPlayer} – Черные: ${blackPlayer}<br>`;
                         }
-                        let crawfordHtml = (enable_crawford_game_number && currentGameNum == enable_crawford_game_number) ? '<span id="crawfordLabel">Кроуфорд</span>' : '';
+                        let crawfordHtml = (enable_crawford_game_number && currentGameNum === enable_crawford_game_number) ? '<span id="crawfordLabel">Кроуфорд</span>' : '';
                         topBar.innerHTML = crawfordHtml + (document.getElementById('gameSelect') ? document.getElementById('gameSelect').outerHTML : '') + (document.getElementById('hideInfoCheckbox') ? document.getElementById('hideInfoCheckbox').outerHTML : '') + '<div id="black-pips" class="pips-above-board">0</div>';
 
                         const hideInfoCheckbox = document.getElementById('hideInfoCheckbox');
