--- a/bot/templates/hint_viewer.html
+++ b/bot/templates/hint_viewer.html
@@ -565,8 +565,8 @@
                 blackPlayer = gameInfo.black_player || 'Unknown';
                 invertColors = gameInfo.invert_colors || false;
                 matchLength = gameInfo.match_length || 0;
-                enable_crawford_game_number = gameInfo.enable_crawford_game || null;
-                console.log(enable_crawford_game_number)
+                enable_crawford_game_number = parseInt(gameInfo.enable_crawford_game) || null;
+                console.log('enable_crawford_game_number:', enable_crawford_game_number)
                 const scores = gameInfo.scores || {};
                 const redScore = scores.Red || 0;
                 const blackScore = scores.Black || 0;
@@ -580,7 +580,7 @@
                         selectHtml += `<option value="${game.game_number}">Игра ${game.game_number}</option>`;
                     });
                     selectHtml += '</select>';
-                    currentGameNum = availableGames[0].game_number;
+                    currentGameNum = parseInt(availableGames[0].game_number);
                     gameRedScore = scores.Red || 0;
                     gameBlackScore = scores.Black || 0;
                     playersInfoDiv.innerHTML = `<div style="display: flex; justify-content: space-between; align-items: center;"><span>Матч до ${matchLength}</span><span>Игра ${currentGameNum}</span><span>Счет: ${gameRedScore} - ${gameBlackScore}</span></div>Белые: ${redPlayer} – Черные: ${blackPlayer}<br>`;
@@ -652,7 +652,7 @@
                     return;
                 }
 
-                currentGameNum = gameNum;
+                currentGameNum = parseInt(gameNum);
                 // Update the select dropdown
                 const gameSelect = document.getElementById('gameSelect');
                 if (gameSelect) {
@@ -686,13 +686,15 @@
                         const gameScores = gameInfo.scores || {};
                         gameRedScore = gameScores.Red || 0;
                         gameBlackScore = gameScores.Black || 0;
-                        enable_crawford_game_number = gameInfo.enable_crawford_game || null;
+                        enable_crawford_game_number = parseInt(gameInfo.enable_crawford_game) || null;
                         if (matchLength === 0) {
                             playersInfoDiv.innerHTML = "Манигейм<br> Белые: " + redPlayer + " – Черные: " + blackPlayer + "<br>";
                         } else {
                             playersInfoDiv.innerHTML = `<div style="display: flex; justify-content: space-between; align-items: center;"><span>Матч до ${matchLength}</span><span>Игра ${currentGameNum}</span><span>Счет: ${gameRedScore} - ${gameBlackScore}</span></div>Белые: ${redPlayer} – Черные: ${blackPlayer}<br>`;
                         }
                         let crawfordHtml = (enable_crawford_game_number && currentGameNum === enable_crawford_game_number) ? '<span id="crawfordLabel">Кроуфорд</span>' : '';
+                        console.log('loadGame currentGameNum:', currentGameNum, 'enable_crawford_game_number:', enable_crawford_game_number, 'crawfordHtml:', crawfordHtml);
+                        console.log('currentGameNum:', currentGameNum, 'enable_crawford_game_number:', enable_crawford_game_number, 'crawfordHtml:', crawfordHtml);
                         topBar.innerHTML = crawfordHtml + (document.getElementById('gameSelect') ? document.getElementById('gameSelect').outerHTML : '') + (document.getElementById('hideInfoCheckbox') ? document.getElementById('hideInfoCheckbox').outerHTML : '') + '<div id="black-pips" class="pips-above-board">0</div>';
 
                         const hideInfoCheckbox = document.getElementById('hideInfoCheckbox');
