--- a/bot/templates/hint_viewer.html
+++ b/bot/templates/hint_viewer.html
@@ -387,7 +387,7 @@
 
         #top-bar {
             display: flex;
-            justify-content: flex-end;
+            justify-content: center;
             align-items: center;
         }
 
@@ -395,11 +395,9 @@
             margin-right: 10px;
         }
 
-        #gameSelect {
-            position: absolute;
-            left: 50%;
-            transform: translateX(-50%);
-        }
+        /* #gameSelect {
+            
+        /* }  */
 
         #players-info {
             max-width: 800px;
